@@ -53,6 +53,7 @@ module ElasticAPM
       end
 
       attr_reader :queue, :filters, :name, :connection, :serializers
+
       def work_forever
         while (msg = queue.pop)
           case msg
