@@ -24,8 +24,6 @@ require 'elastic_apm/transport/connection'
 module ElasticAPM
   module Transport
     RSpec.describe Connection::Http do
-      after { WebMock.reset! }
-
       let(:config) { Config.new(http_compression: false) }
 
       let(:metadata) do
