@@ -22,7 +22,7 @@ require 'integration_helper'
 if defined?(Rails)
   require 'action_controller/railtie'
 
-  RSpec.describe 'Rails logger', :allow_running_agent do
+  RSpec.describe 'Rails logger', :allow_running_agent, :mock_intake do
     before :all do
       module RailsTestApp
         class Application < Rails::Application
@@ -38,11 +38,9 @@ if defined?(Rails)
       class ApplicationController < ActionController::Base
       end
 
-      RailsTestApp::Application.initialize!
-    end
+      MockIntake.stub!
 
-    after :all do
-      ElasticAPM.stop
+      RailsTestApp::Application.initialize!
     end
 
     it 'sets the custom logger' do
