@@ -47,6 +47,7 @@ if enabled
           RailsTestHelpers.setup_rails_test_config(config)
 
           config.elastic_apm.api_request_time = '200ms'
+          config.elastic_apm.cloud_provider = 'none'
           config.elastic_apm.disable_start_message = true
           config.elastic_apm.metrics_interval = '1s'
           config.elastic_apm.pool_size = Concurrent.processor_count
